<?php

class StatutAppro {
    private int $id;
    private string $libelle;
}

// CREATE TABLE statuts_appro (
//     id SERIAL PRIMARY KEY,
//     libelle VARCHAR(50) NOT NULL UNIQUE
// );