@startuml Diagramme_Classe

class Utilisateur {
    - id : int
    - nomComplet : String
    - email : String
    - motDePasse : String
    - adresse : String
    - numeroTelephone : String
}

class Role {
    - id : int
    - nomRole : String
}

class Client {
    - id : int
    - nom : String
    - prenom : String
    - email : String
    - numeroTelephone : String
    - limiteCredit : float
}

class Commande {
    - id : int
    - dateCommande : Date
    - montantTotal : float
    - montantAvance : float
}

class Dette {
    - id : int
    - montantInitial : float
    - montantRestant : float
    - dateCreation : Date
    - dateEcheance : Date
    - statut : String
}

class LigneCommande {
    - id : int
    - quantite : int
    - prixUnitaire : float
    - sousTotal : float
}

class ModePaiement {
    - id : int
    - libelle : String
}

class Reglement {
    - id : int
    - dateReglement : Date
    - montantVerse : float
}

class Produit {
    - id : int
    - libelle : String
    - prixVente : float
    - stockInitial : int
}

class Fournisseur {
    - id : int
    - nom : String
    - email : String
    - numeroTelephone : String
    - adresse : String
}

class StatutAppro {
    - id : int
    - libelle : String
}

class Approvisionnement {
    - id : int
    - referenceBon : String
    - dateApprovisionnement : Date
}

class LigneApprovisionnement {
    - id : int
    - quantiteCommandee : int
    - quantiteRecue : int
    - prixUnitaire : float
}


Utilisateur "0..*" --> "1" Role

Client "1" --> "0..*" Commande
Commande "0..*" --> "1" Utilisateur
Commande "0..*" --> "1" ModePaiement

Commande "1" --> "0..*" LigneCommande
Produit "1" --> "0..*" LigneCommande

Commande "1" --> "0..1" Dette
Dette "1" --> "0..*" Reglement
Reglement "0..*" --> "1" ModePaiement

Approvisionnement "0..*" --> "1" Fournisseur
Approvisionnement "1" --> "0..*" LigneApprovisionnement
Produit "1" --> "0..*" LigneApprovisionnement

StatutAppro "1" --> "0..*" Approvisionnement
Approvisionnement "0..*" --> "1" Utilisateur

@enduml